# cmake-intellisence

./: .eslintrc.json  .gitignore  .mocharc.json  .vscodeignore  CHANGELOG.md  LICENSE  README-zh-CN.md  README.md  ThirdPartyNotice.txt  depends.json  language-configuration.json  package-lock.json  package.json  package.nls.json  package.nls.zh-cn.json  snippets.json  tsconfig.base.json  tsconfig.json  webpack.config.client.js  webpack.config.js  webpack.config.server.js
client/: package-lock.json  package.json  (+1 more)
server/src/test/integration/fixtures/definition/: CMakeLists.txt  builtin-paths.cmake  cache-before-include.cmake  conditional-variable.cmake  files.cmake  include-variable-override.cmake  incomplete-command.cmake  list-created-variable.cmake  module-path-entry.cmake  module-path-via-include.cmake  ordered-command.cmake  quoted-paths.cmake  repeated-include.cmake  targets.cmake  unrelated.cmake  variable-paths.cmake  workspace-fallback.cmake  workspace-only-command.cmake
server/src/test/integration/fixtures/definition/custom-modules/: NoFileApiHelpers.cmake
server/src/test/integration/fixtures/definition/include/: cache-shadow.cmake  helpers.cmake  lib.h  loop1.cmake  loop2.cmake  module-path-setup.cmake  repeated-use.cmake  variable-override.cmake
server/src/test/integration/fixtures/definition/module-consumer/: CMakeLists.txt
server/src/test/integration/fixtures/definition/sources/: extra.cpp  lib.cpp
server/src/test/integration/fixtures/definition/src/: CMakeLists.txt
server/src/test/integration/fixtures/definition/src/lib/: CMakeLists.txt
(+168 files in other folders)
